--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 a {
-  color: #e43c5c;
+  color: #03045e;
   text-decoration: none;
 }
 
@@ -43,7 +43,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #e43c5c;
+  background: #03045e;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -155,7 +155,7 @@ h6 {
   height: 2px;
   bottom: -6px;
   left: 0;
-  background-color: #e43c5c;
+  background-color: #03045e;
   visibility: hidden;
   transform: scaleX(0);
   transition: all 0.3s ease-in-out 0s;
@@ -208,7 +208,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 .navbar .dropdown:hover>ul {
@@ -313,7 +313,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 .navbar-mobile .getstarted,
@@ -348,7 +348,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -429,8 +429,8 @@ h6 {
 }
 
 #hero .btn-get-started:hover {
-  background: #e43c5c;
-  border: 2px solid #e43c5c;
+  background: #03045e;
+  border: 2px solid #03045e;
 }
 
 @media (min-width: 1024px) {
@@ -487,7 +487,7 @@ section {
   line-height: 1;
   margin: 0;
   background: #fdeff2;
-  color: #e43c5c;
+  color: #03045e;
   display: inline-block;
   text-transform: uppercase;
   border-radius: 50px;
@@ -500,7 +500,7 @@ section {
 }
 
 .section-title h3 span {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 .section-title p {
@@ -541,7 +541,7 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #e43c5c;
+  color: #03045e;
   line-height: 1;
 }
 
@@ -559,14 +559,14 @@ section {
   border-radius: 50px;
   transition: 0.3s;
   line-height: 1;
-  color: #e43c5c;
+  color: #03045e;
   animation-delay: 0.8s;
   margin-top: 6px;
-  border: 2px solid #e43c5c;
+  border: 2px solid #03045e;
 }
 
 .about .content .btn-learn-more:hover {
-  background: #e43c5c;
+  background: #03045e;
   color: #fff;
   text-decoration: none;
 }
@@ -603,7 +603,7 @@ section {
 }
 
 .services .icon-box:hover::before {
-  background: #e43c5c;
+  background: #03045e;
   top: 0;
   border-radius: 0px;
 }
@@ -615,7 +615,7 @@ section {
 .services .icon i {
   font-size: 48px;
   line-height: 1;
-  color: #e43c5c;
+  color: #03045e;
   transition: all 0.3s ease-in-out;
 }
 
@@ -679,7 +679,7 @@ section {
 }
 
 .features .icon-box:hover a {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 /*--------------------------------------------------------------
@@ -717,8 +717,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #e43c5c;
-  border: 2px solid #e43c5c;
+  background: #03045e;
+  border: 2px solid #03045e;
 }
 
 @media (min-width: 1024px) {
@@ -755,7 +755,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #e43c5c;
+  background: #03045e;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -781,7 +781,7 @@ section {
   bottom: -50px;
   z-index: 3;
   transition: all ease-in-out 0.3s;
-  background: #e43c5c;
+  background: #03045e;
   padding: 15px 20px;
 }
 
@@ -914,7 +914,7 @@ section {
 
 .pricing .box h4 {
   font-size: 42px;
-  color: #e43c5c;
+  color: #03045e;
   font-weight: 500;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 20px;
@@ -946,7 +946,7 @@ section {
 }
 
 .pricing .box ul i {
-  color: #e43c5c;
+  color: #03045e;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -965,8 +965,8 @@ section {
   display: inline-block;
   padding: 8px 40px 10px 40px;
   border-radius: 50px;
-  border: 2px solid #e43c5c;
-  color: #e43c5c;
+  border: 2px solid #03045e;
+  color: #03045e;
   font-size: 14px;
   font-weight: 400;
   font-family: "Nunito", sans-serif;
@@ -975,16 +975,16 @@ section {
 }
 
 .pricing .box .btn-buy:hover {
-  background: #e43c5c;
+  background: #03045e;
   color: #fff;
 }
 
 .pricing .recommended {
-  border-color: #e43c5c;
+  border-color: #03045e;
 }
 
 .pricing .recommended .btn-buy {
-  background: #e43c5c;
+  background: #03045e;
   color: #fff;
 }
 
@@ -1002,7 +1002,7 @@ section {
   font-size: 13px;
   padding: 3px 25px 6px 25px;
   background: #fce6ea;
-  color: #e43c5c;
+  color: #03045e;
   border-radius: 50px;
 }
 
@@ -1027,7 +1027,7 @@ section {
 .faq .faq-list .question {
   display: block;
   position: relative;
-  font-family: #e43c5c;
+  font-family: #03045e;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
@@ -1058,7 +1058,7 @@ section {
 }
 
 .faq .faq-list .collapsed:hover {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 .faq .faq-list .collapsed .icon-show {
@@ -1127,7 +1127,7 @@ section {
 }
 
 .team .member .social a:hover {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 .team .member .social i {
@@ -1174,7 +1174,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #e43c5c;
+  color: #03045e;
   float: left;
   width: 44px;
   height: 44px;
@@ -1209,7 +1209,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #e43c5c;
+  background: #03045e;
   color: #fff;
 }
 
@@ -1272,7 +1272,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #e43c5c;
+  border-color: #03045e;
 }
 
 .contact .php-email-form input {
@@ -1284,7 +1284,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #e43c5c;
+  background: #03045e;
   border: 0;
   padding: 10px 28px;
   color: #fff;
@@ -1378,7 +1378,7 @@ section {
 }
 
 .blog .entry .entry-title a:hover {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 .blog .entry .entry-meta {
@@ -1423,7 +1423,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #e43c5c;
+  background: #03045e;
   color: #fff;
   padding: 6px 20px;
   transition: 0.3s;
@@ -1487,7 +1487,7 @@ section {
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1596,7 +1596,7 @@ section {
 }
 
 .blog .blog-comments .comment h5 a:hover {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 .blog .blog-comments .comment h5 .reply {
@@ -1697,7 +1697,7 @@ section {
 
 .blog .blog-pagination li.active,
 .blog .blog-pagination li:hover {
-  background: #e43c5c;
+  background: #03045e;
 }
 
 .blog .blog-pagination li.active a,
@@ -1748,7 +1748,7 @@ section {
   font-size: 16px;
   padding: 0 15px;
   margin: -1px;
-  background: #e43c5c;
+  background: #03045e;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -1778,7 +1778,7 @@ section {
 }
 
 .blog .sidebar .categories ul a:hover {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 .blog .sidebar .categories ul a span {
@@ -1808,7 +1808,7 @@ section {
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #e43c5c;
+  color: #03045e;
 }
 
 .blog .sidebar .recent-posts time {
@@ -1844,8 +1844,8 @@ section {
 
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #e43c5c;
-  background: #e43c5c;
+  border: 1px solid #03045e;
+  background: #03045e;
 }
 
 .blog .sidebar .tags ul a span {
@@ -1933,7 +1933,7 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #e43c5c;
+  color: #03045e;
 }
 
 #footer .footer-newsletter {
@@ -1973,7 +1973,7 @@ section {
   background: none;
   font-size: 15px;
   padding: 0 22px;
-  background: #e43c5c;
+  background: #03045e;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -1993,7 +1993,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #e43c5c;
+  background: #03045e;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
