--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -486,7 +486,7 @@ section {
   padding: 8px 20px;
   line-height: 1;
   margin: 0;
-  background: #fdeff2;
+  background: #caf0f8;
   color: #03045e;
   display: inline-block;
   text-transform: uppercase;
@@ -593,7 +593,7 @@ section {
 .services .icon-box::before {
   content: "";
   position: absolute;
-  background: #fdeff2;
+  background: #caf0f8;
   right: 0;
   left: 0;
   bottom: 0;
@@ -1178,7 +1178,7 @@ section {
   float: left;
   width: 44px;
   height: 44px;
-  background: #fdeff2;
+  background: #caf0f8;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1293,7 +1293,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #d01d3f;
+  background: #caf0f8;
 }
 
 @keyframes animate-loading {
@@ -2006,7 +2006,7 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #d01d3f;
+  background: #caf0f8;
   color: #fff;
   text-decoration: none;
 }
