--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ h6 {
   height: 2px;
   bottom: -6px;
   left: 0;
-  background-color: #03045e;
+  background-color: #FFFFFF;
   visibility: hidden;
   transform: scaleX(0);
   transition: all 0.3s ease-in-out 0s;
