--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #48cae4;
+  background: #caf0f8;
   color: #fff;
 }
 
@@ -1909,7 +1909,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #ea6981;
+  color: #3d3b5f;
   font-size: 18px;
   line-height: 1;
 }
